# the-autonomous-enclave

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/src/enclave/: config.py  exceptions.py  main.py  models.py  protocols.py  seed.py
backend/src/enclave/api/: deps.py
backend/src/enclave/api/v1/: citizens.py  interventions.py  router.py  websocket.py
backend/src/enclave/services/: agent_runtime.py  contracts.py  economy.py  inference_market.py  judge.py  llm_client.py  memory_store.py  message_broker.py  persistence.py  tick_engine.py
backend/tests/: conftest.py  test_agent_runtime.py  test_citizens_api.py  test_contracts.py  test_economy.py  test_judge.py  test_models.py  test_persistence.py  test_seed.py  test_tick_engine.py
docs/: vision.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/dashboard/: ActivityFeed.tsx  CitizenCensus.tsx  CitizenFoundry.tsx  ConsciousnessInspector.tsx  DivineConsole.tsx  EconomyPanel.tsx  HelpOverlay.tsx
frontend/src/components/phaser/: GameCanvas.tsx  MainScene.ts  mapConstants.ts  pathfinding.ts  tileset.ts
frontend/src/hooks/: useTelemetrySocket.ts
frontend/src/types/: api.ts
scripts/: generate_tileset.py
