[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enclave"
version = "0.1.0"
description = "Orquestador backend de The Autonomous Enclave: tick engine, agentes LLM, economia y juez autonomo."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "redis>=5.1",
    "qdrant-client>=1.11",
    "asyncpg>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/enclave"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # Depends(...) como valor por defecto es el patrón idiomático de FastAPI

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true  # asyncpg no distribuye un marcador py.typed

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
